[gd_scene load_steps=3 format=3 uid="uid://b5mj5n5mcyrgd"]

[ext_resource type="Script" path="res://main.gd" id="1_fycvi"]
[ext_resource type="PackedScene" uid="uid://4etq23lry54j" path="res://background.tscn" id="1_vpyo5"]

[node name="Main" type="Node2D"]
script = ExtResource("1_fycvi")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_vpyo5")]

[node name="Word1" type="Label" parent="."]
offset_left = 19.0
offset_top = 149.0
offset_right = 100.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 24
text = "Word1
"

[node name="Word2" type="Label" parent="."]
offset_left = 18.0
offset_top = 338.0
offset_right = 69.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 24
text = "Word2
"

[node name="Word3" type="Label" parent="."]
offset_left = 18.0
offset_top = 556.0
offset_right = 69.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 24
text = "Word3
"

[node name="Word4" type="Label" parent="."]
offset_left = 25.0
offset_top = 773.0
offset_right = 76.0
offset_bottom = 796.0
theme_override_font_sizes/font_size = 24
text = "Word4
"

[node name="Word5" type="Label" parent="."]
offset_left = 26.0
offset_top = 974.0
offset_right = 77.0
offset_bottom = 997.0
theme_override_font_sizes/font_size = 24
text = "Word5"
